# apps/user-service/api-spec.json
@@ -37,6 +37,34 @@
         }
       }
     },
+    "/users": {
+      "get": {
+        "operationId": "getUsers",
+        "tags": ["users"],
+        "description": "Get users",
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": { "type": "string" },
+                      "name": { "type": "string" }
+                    },
+                    "required": ["id", "name"],
+                    "additionalProperties": false
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/hello/{languageCode}": {
       "get": {
         "operationId": "sayHello",
